# guessing-number

./: .gitignore  README.MD
.github/workflows/: build.yml
src/: index.html  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
